resources/bluespice.visualEditorConnector.css
.ve-init-sa-desktopTarget {
	min-height: 190px;
	max-width: 100%;
	width: 100%;
	height: auto;
	margin-left: 0;
	border-radius: 3px;
	border: 1px solid #BBB;
	padding: 1px 0px;
	border-collapse: separate;
	border-spacing: 2px;
	background-color: #FFFFFF;
}

.x-ie11 .ve-init-sa-desktopTarget {
	min-height: initial;
	width: auto;
	min-height: initial;
}

.ve-init-sa-desktopTarget form {
	background-color: #FFFFFF;
	padding: 0px;
}

.ve-init-sa-desktopTarget .oo-ui-popupToolGroup-header {
	display: none;
}

.ve-init-sa-desktopTarget .oo-ui-popupWidget-anchored-top {
	margin-top: 50px;
}

.ve-init-sa-desktopTarget span.ve-ce-branchNode-slug {
	display: inline-block;
}

.ve-init-sa-desktopTarget section.ve-ce-branchNode {
	/* fix for IE to hide resize handles */
	pointer-events: none;
}

.bs-visualeditorconnector-cancel-edit {
	vertical-align: middle;
	border-left: 1px solid #c8ccd1;
	padding: 5px;
}

.bs-vec-text-color-current {
    width: 10px;
    height: 10px;
    position: absolute;
    bottom: 2px;
    right: 0;
	line-height: 0;
	font-size: 40px;
	overflow: hidden;
}

.bs-vec-text-color-current:before {
	content: "\25A0";
	margin-left: -10px;
}

.bs-vec-color-widget {
	text-align: left;
}

.bs-vec-styleInspector .oo-ui-popupWidget-popup .oo-ui-clippableElement-clippable {
	height: auto !important;
}

.bs-vec-ui-tableContextItem .ve-ui-linearContextItem-actions {
	display: inline-block;
	width: 300px;
	text-align: right;
}

.bs-vec-ui-tableContextItem .ve-ui-linearContextItem-actions .oo-ui-buttonWidget {
	display: inline-block;
}

.bs-vec-ui-tableContextItem .ve-ui-linearContextItem-title {
	display: inline-block;
	width: 100px;
}

.bs-vec-command-widget {
	display: inline;
}

.bs-vec-command-widget.bs-vec-number-widget:not( .bs-vec-unit-selectable ) .oo-ui-numberInputWidget{
	width: 120px;
}

.bs-vec-command-widget.bs-vec-number-widget .oo-ui-buttonWidget {
	margin: 0;
}

.bs-vec-command-widget.bs-vec-number-widget .oo-ui-numberInputWidget input {
	width: 50px;
}

.dialog-header {
	width: 100%;
	padding: 10px;
	text-align: center;
	z-index: 6 !important;
}

.dialog-header .dialog-header-title {
	font-size: 1.2em;
}

.dialog-header .dialog-header-close {
	position: absolute;
	right: 5px;
	top: 10px;
}

.dialog-body {
	padding-top: 50px;
}

.bs-vec-table-options-dialog-item {
	padding: 10px;
}

.bs-vec-table-options-dialog-item label{
	display: inline-block;
}

.bs-vec-table-options-dialog-item > .oo-ui-widget:not( .oo-ui-labelWidget ) {
	float: right;
	display: inline-block;
}

.bs-vec-unit-selectable {
	width: 230px;
}

.bs-vec-unit-selectable .oo-ui-dropdownInputWidget {
	width: 100px;
	display: inline-block;
}

.bs-vec-unit-selectable .oo-ui-numberInputWidget {
	width: 120px;
}

